WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288238
AX: AccessibilityRenderObject::addChildren() sometimes does not null-check the AXObjectCache before using it, causing crashes
https://bugs.webkit.org/show_bug.cgi?id=288238
Summary
AX: AccessibilityRenderObject::addChildren() sometimes does not null-check th...
Tyler Wilcock
Reported
2025-02-21 13:42:40 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-21 13:42:49 PST
<
rdar://problem/145319178
>
Tyler Wilcock
Comment 2
2025-02-21 13:58:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41094
EWS
Comment 3
2025-02-22 21:26:13 PST
Committed
290903@main
(0dc82e8cdc09): <
https://commits.webkit.org/290903@main
> Reviewed commits have been landed. Closing PR #41094 and removing active labels.
EWS
Comment 4
2025-02-24 12:56:01 PST
Committed
289651.164@safari-7621-branch
(8d527c7c1546): <
https://commits.webkit.org/289651.164@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2664 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug