AX: AccessibilityRenderObject::addChildren() sometimes does not null-check the AXObjectCache before using it, causing crashes https://bugs.webkit.org/show_bug.cgi?id=288238 rdar://145319178

Reviewed by Chris Fleizach.

I see some rare crashes in accessibility/add-children-pseudo-element.html and other tests because we aren't null-checking
the cache before using it. This commit adds the appropriate checks.

* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::addChildren):

Canonical link: https://commits.webkit.org/290903@main